--- a/index.html
+++ b/index.html
@@ -17,10 +17,33 @@
             <div class="banner_containt">
                 <h2>All Thinks Are Possible If You believe</h2>
                 <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
-                <button class="primary_btn">Contact Us</button>
+                <button class="primary_btn"> <a href="#"> Contact Us</a></button>
             </div>
         </section>
     </header>
+
+    <main>
+
+        <section>
+            <div class="contrary_contain">
+                <div class="contrary_img">
+                    <img src="images/person.png" alt="person image">
+                </div>
+                <div class="contrary_description">
+                    <h3>My failures of previous year</h3>
+                    <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.</p>
+                    <ul>
+                        <li><i class="fa-solid fa-check"></i>Contrary to popular belief, is not simply.</li>
+                        <li><i class="fa-solid fa-check"></i>Contrary to popular belief.</li>
+                        <li><i class="fa-solid fa-check"></i>Contrary to popular , is not simply.</li>
+                        <li><i class="fa-solid fa-check"></i>Contrary to popular belief, is not simply.</li>
+                        <li><i class="fa-solid fa-check"></i>Contrary to popular simply.</li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+
+    </main>
 
 </body>
 </html>
