--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 <body>
     
+    <!-- header section -->
     <header>
         <section class="banner_section">
             <div class="banner_containt">
@@ -24,6 +25,7 @@
 
     <main>
 
+        <!-- contrary section -->
         <section>
             <div class="contrary_contain">
                 <div class="contrary_img">
@@ -43,6 +45,38 @@
             </div>
         </section>
 
+        <!-- attention section -->
+        <section class="attention">
+            <div class="attention_container">
+                <div class="attention_title">
+                    <h3>My Plans</h3>
+                </div>
+                <div class="attention_containt">
+                    <div class="attention_plan">
+                        <img src="images/icons/web.png" alt="development">
+                        <h4>Web Development</h4>
+                        <p>I want to start</p>
+                    </div>
+                    <div class="attention_plan">
+                        <img src="images/icons/js.png" alt="development">
+                        <h4>Javascript</h4>
+                        <p>I want to learn</p>
+                    </div>
+                    <div class="attention_plan">
+                        <img src="images/icons/smoke.png" alt="development">
+                        <h4>Smoking Habit</h4>
+                        <p>I want to end</p>
+                    </div>
+                    <div class="attention_plan">
+                        <img src="images/icons/ecom.png" alt="development">
+                        <h4>ecommerce</h4>
+                        <p>I want to develop</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        
     </main>
 
 </body>
