--- a/index.html
+++ b/index.html
@@ -76,7 +76,16 @@
             </div>
         </section>
 
-        
+        <!-- gradien section -->
+        <section class="gradien">
+            <div class="gradien_backgound">
+                <div class="gradien_containt">
+                    <h3>Awlays keep a positive mindset</h3>
+                    <button class="primary_btn"> <a href="#">Call Now</a></button>
+                </div>
+            </div>
+        </section>
+
     </main>
 
 </body>
