--- a/index.html
+++ b/index.html
@@ -1,23 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/86dc86278c.js" crossorigin="anonymous"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Inter&family=Lobster&family=Open+Sans&family=Work+Sans&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter&family=Lobster&family=Open+Sans&family=Work+Sans&display=swap"
+        rel="stylesheet">
     <link rel="shortcut icon" type="image/x-icon" href="images/icons/title_icon.png">
     <title>Milestone 1 Assignment</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-    
+
     <!-- header section -->
     <header>
         <section class="banner_section">
             <div class="banner_containt">
                 <h2>All Thinks Are Possible If You believe</h2>
-                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                    alteration in some form, by injected humour, or randomised words</p>
                 <button class="primary_btn"> <a href="#"> Contact Us</a></button>
             </div>
         </section>
@@ -33,7 +40,8 @@
                 </div>
                 <div class="contrary_description">
                     <h3>My failures of previous year</h3>
-                    <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.</p>
+                    <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of
+                        classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.</p>
                     <ul>
                         <li><i class="fa-solid fa-check"></i>Contrary to popular belief, is not simply.</li>
                         <li><i class="fa-solid fa-check"></i>Contrary to popular belief.</li>
@@ -85,8 +93,35 @@
                 </div>
             </div>
         </section>
-
     </main>
 
+    <!-- footer section -->
+    <footer>
+        <div class="footer_container">
+            <div class="footer_description">
+                <h2>Future</h2>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                    alteration in some form, by injected humour, or randomised words</p>
+                <br>
+                <p>Email : sssakibhasan997@gmail.com</p>
+                <br>
+                <p>Phone : 01626 38 0 000</p>
+                <br>
+                <div class="footer_img">
+                    <img src="images/icons/fb.png" alt="">
+                    <img src="images/icons/twitter.png" alt="">
+                    <img src="images/icons/youtube.png" alt="">
+                </div>
+            </div>
+            <div class="form">
+                <h6>Subscribe</h6>
+                <input type="email" name="" id="" placeholder="Enter your email">
+                <br>
+                <button class="primary_btn btn_color"> <a href="#">Subscribe</a></button>
+            </div>
+        </div>
+    </footer>
+
 </body>
+
 </html>
