--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
                 <p>Phone : 01626 38 0 000</p>
                 <br>
                 <div class="footer_img">
-                    <img src="images/icons/fb.png" alt="">
-                    <img src="images/icons/twitter.png" alt="">
-                    <img src="images/icons/youtube.png" alt="">
+                   <a href="#"> <img src="images/icons/fb.png" alt=""></a>
+                   <a href="#">  <img src="images/icons/twitter.png" alt=""></a>
+                   <a href="#">  <img src="images/icons/youtube.png" alt=""></a>
                 </div>
             </div>
             <div class="form">
